# rust-sample-apps

app/query_wmi/: Cargo.toml
app/query_wmi/src/: main.rs
app/winrm/src/: main.rs
app/wmi/: Cargo.toml
app/wmi/src/: main.rs
python/: Dockerfile  docker-compose.yml
python/app/: main.py
python/app/command/: pywinrm-e.py  pywinrm.py
python/app/router/: ad.py
rust/: Dockerfile  docker-compose.yml
rust/app/winrm/: Cargo.toml
