[package]
name = "winrm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.159", features = ["derive"] }
serde-xml-rs = "0.6.0"
tokio = { version = "1.27.0", features = ["full"] }
base64 = "0.21.0"
uuid = { version = "1.3.0", features = ["v4","fast-rng", "macro-diagnostics"] }
